[package]
name = "md-tools"
version = "0.2.0"
authors = ["genshen <genshenchu@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "3.0.6", features = ["derive"]}
libc = "0.2"
rayon = "1.5.1"
xyzio = "0.3.1"
byte_struct = "0.6.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.59.1"

[features]
default = []
minio-analysis = []
