[package]
name = "md-tools"
version = "0.2.0"
authors = ["genshen <genshenchu@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "3.1.9", features = ["derive"]}
libc = "0.2"
rayon = "1.5.2"
xyzio = "0.3.1"
byte_struct = "0.6.1"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.59.1"

[features]
default = []
minio-analysis = []
